@@ -794,14 +794,14 @@
       <replace file="${webtests.build}/webtest.web.xml"
                token="REMOVE ME TO ENABLE JDBC DATABASE  --&gt;" value="" />
 
-      <!-- For unit testing, turn on container auth -->
+      <!-- For unit testing and some webtests, turn on container auth -->
       <copy file="${webtests.build}/webtest.web.xml"
-          tofile="${webtests.build}/unittest.web.xml" overwrite="true" />
-      <replace file="${webtests.build}/unittest.web.xml"
+          tofile="${webtests.build}/containerauth.web.xml" overwrite="true" />
+      <replace file="${webtests.build}/containerauth.web.xml"
                token="&lt;!--  REMOVE ME TO ENABLE CONTAINER-MANAGED AUTH" value="" />
-      <replace file="${webtests.build}/unittest.web.xml"
+      <replace file="${webtests.build}/containerauth.web.xml"
                token="REMOVE ME TO ENABLE CONTAINER-MANAGED AUTH  --&gt;" value="" />
-      <copy file="${webtests.build}/unittest.web.xml"
+      <copy file="${webtests.build}/containerauth.web.xml"
           tofile="tests/etc/WEB-INF/web.xml" overwrite="true" />
 
   </target>
@@ -843,7 +843,7 @@
         <formatter type="xml" usefile="yes" />
         <batchtest todir="${tests.reports}">
            <fileset dir="${tests.src}">
-                <exclude name="**/*Test.java" />
+                <include name="**/*Test.java" />
                 <exclude name="**/AllTest*java" />
                 <include name="**/StressTestSpeed.java" if="tests.stress.enabled"/>
                 <include name="**/StressTestVersioningProvider.java" if="tests.stress.enabled"/>
@@ -935,7 +935,7 @@
 
     <!-- Build the container auth WAR -->
     <webtest-setup context="test-container"
-      webxml="${webtests.build}/unittest.web.xml" />
+      webxml="${webtests.build}/containerauth.web.xml" />
 
     <!-- Build the custom auth WAR (JDBC database) -->
     <webtest-setup context="test-custom-jdbc"
@@ -948,7 +948,7 @@
 
     <!-- Build the container auth WAR (JDBC database) and test it -->
     <webtest-setup context="test-container-jdbc"
-      webxml="${webtests.build}/unittest.web.xml">
+      webxml="${webtests.build}/containerauth.web.xml">
       <propertyfile-entries>
         <entry key="jspwiki.userdatabase" value="org.apache.wiki.auth.user.JDBCUserDatabase" />
         <entry key="jspwiki.groupdatabase" value="org.apache.wiki.auth.authorize.JDBCGroupDatabase" />
